rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_edit_circle_via_point.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch001 = sketch(on = XY) {
  circle(start = [var 7mm, var 1mm], center = [var 0mm, var 0mm])
}

