rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_edit_diameter_constraint_label_position.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  arc1 = arc(start = [var 5mm, var 0mm], end = [var 0mm, var 5mm], center = [var 0mm, var 0mm])
  diameter(arc1, labelPosition = [10mm, 11mm]) == 10mm
}

