rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_edit_distance_constraint_label_position.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  point1 = point(at = [var 1, var 2])
  point2 = point(at = [var 3, var 2])
  distance([point1, point2], labelPosition = [10mm, 11mm]) == 2mm
}

