rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_edit_line_when_editing_its_start_point.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  line(start = [var 5in, var 6in], end = [var 3, var 4])
}

