rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_edit_line_with_coincident_feedback.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  line1 = line(
    start = [var 0, var 0],
    end = [
      var 4.14466094031757,
      var 5.319805153353355
    ],
  )
  line2 = line(
    start = [
      var 4.144660940326949,
      var 5.31980515334522
    ],
    end = [var 9, var 10],
  )
  fixed([line1.start, [0, 0]])
  coincident([line1.end, line2.start])
  equalLength([line1, line2])
}
