rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_line_horizontal.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  line1 = line(start = [var 1, var 2.999999999], end = [var 3, var 3])
  horizontal(line1)
}
