rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_line_vertical.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  line1 = line(start = [var 1.9999999990000001, var 2], end = [var 2, var 4])
  vertical(line1)
}
