rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_lines_angle.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  line1 = line(
    start = [
      var 0.8235211624543554,
      var 2.320759509799522
    ],
    end = [
      var 3.176478921454837,
      var 3.679240490200478
    ],
  )
  line2 = line(
    start = [
      var 5.32075965586073,
      var 5.823521053315239
    ],
    end = [
      var 6.67924034413927,
      var 8.176478946684762
    ],
  )
  angle([line1, line2]) == 30deg
}
